# dnsmesh-app

./: .dnsmesh-rs-ref  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package.json
.github/workflows/: ci.yml  release-android.yml  release-linux.yml  release-macos.yml  release-windows.yml  release.yml
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: backup.rs  contacts.rs  identity.rs  import_cli.rs  inbox.rs  intro.rs  messaging.rs  mod.rs  nodes.rs
src/lib/: api.ts  avatar.ts  emoticons.ts
src/lib/stores/: contacts.ts  conversations.ts  identity.ts  inbox.ts  intros.ts  sent.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/about/: +page.svelte
src/routes/compose/: +page.svelte
src/routes/contacts/: +page.svelte
src/routes/identities/: +page.svelte
src/routes/intro/: +page.svelte
src/routes/settings/: +page.svelte
